@@ -20,7 +20,7 @@
 int edgex_device_handler_discovery
 (
   void *ctx,
-  const char *url,
+  char *url,
   edgex_http_method method,
   const char *upload_data,
   size_t upload_data_size,
