@@ -110,7 +110,7 @@ edgex_device_service *edgex_device_service_new
 static int ping_handler
 (
   void *ctx,
-  const char *url,
+  char *url,
   edgex_http_method method,
   const char *upload_data,
   size_t upload_data_size,
